<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.abh.articles.presentation.main.MainViewModel" />

        <variable
            name="adapter"
            type="com.abh.articles.presentation.main.ArticleAdapter" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/action_bar"
        android:id="@+id/action_bar_layout" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_articles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="?attr/actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:setAdapter="@{adapter}"
        app:submitList="@{viewModel.articleList}"
        tools:listitem="@layout/item_articles" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:manageState="@{viewModel.showProgressBar}" />



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>