...
        android:background="@color/colorPrimary"
        app:elevation="8dp"
        android:animateLayoutChanges="true"
       >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
...
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
          >

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:layout_gravity="center_vertical|start"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:onClick="onBackPress"
...
